/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.14.3/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.example.kiwoomapi'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa' // For database operations
    implementation 'org.springframework.boot:spring-boot-starter-websocket' // For real-time stock prices
    implementation 'org.springframework.boot:spring-boot-starter-validation' // For input validation
    implementation 'org.springframework.boot:spring-boot-starter-actuator' // For monitoring
    implementation 'org.springframework.boot:spring-boot-starter-logging' // For logging
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
    implementation 'javax.websocket:javax.websocket-api:1.1'
    implementation 'org.springframework.retry:spring-retry'
    implementation 'org.springframework:spring-aspects' // Required for @Retryable
    runtimeOnly 'com.h2database:h2'
}

tasks.named('test') {
    useJUnitPlatform()
}
